--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -18,7 +18,7 @@
     <input id="box" name="box" type="text" autocomplete="off" />
   </div>
 
-  <div id="app-chat" style="display:none;"></div>
+  <div id="app-chat"></div>
   
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="/socket.io/socket.io.js"></script>
